--- a/analysis/Study1.qmd
+++ b/analysis/Study1.qmd
@@ -220,7 +220,7 @@ df7a <- haven::read_sav("../data/Brand2023/Data_Giessen.sav") |>
   mutate(across(starts_with("MAIA_"), \(x) x - 1)) # Original scale 1-6
 
 df7a$STAIT_Mean <- df7a$STAIT_Sum/20
-df7a$NEO_FFI_Mean <- rowMeans(select(df7a,NEOFFI_01:NEOFFI_12))
+df7a$Neuroticism <- rowMeans(select(df7a,NEOFFI_01:NEOFFI_12))
 
 
 df7b <- haven::read_sav("../data/Brand2023/Data_Mainz.sav") |> 
@@ -329,11 +329,11 @@ df9 <- df9 |>
     Affective_touch = IAS_19, Tickle = IAS_20, Itch = IAS_21
   ) |>
   mutate(
-    BFI_NEUROTICISM = (BFI_1 + BFI_2 + BFI_3)/3,
-    BFI_AGREEABLENESS = (BFI_10R + BFI_11 + BFI_12)/3,
-    BFI_EXTROVERSION = (BFI_4 + BFI_5 + BFI_6),
-    BFI_CONSCIENTIOUSNESS = (BFI_13 + BFI_14 + BFI_15R)/3,
-    BFI_OPENNESS = (BFI_7 + BFI_8 + BFI_9)/3) |>
+    Neuroticism = (BFI_1 + BFI_2 + BFI_3)/3,
+    Agreeableness = (BFI_10R + BFI_11 + BFI_12)/3,
+    Extraversion = (BFI_4 + BFI_5 + BFI_6),
+    Conscientiousness = (BFI_13 + BFI_14 + BFI_15R)/3,
+    Openness = (BFI_7 + BFI_8 + BFI_9)/3) |>
   mutate(across(starts_with("BFI_"), \(x) datawizard::rescale(x, to = c(0, 1))))
   
 ```
@@ -365,9 +365,17 @@ df10 <- read.csv("https://raw.githubusercontent.com/RealityBending/IllusionGameR
          across(starts_with("PI_"), \(x) datawizard::rescale(x, to = c(0, 1))),
          across(starts_with("Item_PHQ4_Depression_"), \(x) datawizard::rescale(x, to = c(1,4))),
         across(starts_with("Item_PHQ4_Anxiety_"), \(x) datawizard::rescale(x, to = c(1,4))),
-        across(starts_with("IPIP6_"), \(x) datawizard::rescale(x, to = c(0,1)))) |>
-  mutate(PHQ4_Depression = Item_PHQ4_Depression_3 + Item_PHQ4_Depression_4,
-          PHQ4_Anxiety = Item_PHQ4_Anxiety_1 + Item_PHQ4_Anxiety_2)
+        across(starts_with("IPIP6_"), \(x) datawizard::rescale(x, to = c(0,1))),
+        PHQ4_Depression = Item_PHQ4_Depression_3 + Item_PHQ4_Depression_4,
+          PHQ4_Anxiety = Item_PHQ4_Anxiety_1 + Item_PHQ4_Anxiety_2) |>
+  rename(
+     Agreeableness = IPIP6_Agreeableness,
+    Conscientiousness = IPIP6_Conscientiousness,
+    Extraversion = IPIP6_Extraversion,
+    HonestyHumility = IPIP6_HonestyHumility,
+    Neuroticism = IPIP6_Neuroticism,
+    Openness = IPIP6_Openness
+  )
 ```
 
 ### Sample 11
