--- a/analysis/figures/table2.tex
+++ b/analysis/figures/table2.tex
@@ -1,4 +1,4 @@
-\begin{table}[t]
+\begin{table}
 \fontsize{6.8pt}{8.1pt}\selectfont
 \begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}lrlrrl}
 \toprule
